# urban-sami

./: .gitignore  PROJECT_MAP.md  README.md  pyproject.toml
docs/: EQUATION_TRACEABILITY.md  GITHUB_UPLOAD.md  PHASE1_VISUAL_GUIDE.md  REPRODUCIBILITY.md  equation-traceability.csv  figure-style-nature-notes-2026-04-22.md  monograph-script-crosswalk.csv  theory-framing.md
examples/: compare-state-summary-baseline.yaml  geojson-indicator-sami-demo.yaml  geojson-point-assign-demo.yaml  indicator-compute-demo.yaml  indicator-sami-demo.yaml  polisplexity-ageb-matrix-parity.yaml  polisplexity-ageb-run-dir-parity-live.yaml  polisplexity-manzana-matrix-parity-live.yaml  polisplexity-state-matrix-parity.yaml  polisplexity-state-run-dir-parity.yaml  replay-manzana-workflow.yaml  replay-state-workflow.yaml
scripts/: analyze_spatial_information_regimes.py  bootstrap_experiment_db.sh  build_city_interactive_atlas.py  extract_city_osm_networks_to_db.py  fetch_inegi_ageb_urban.py  fetch_inegi_city_population.py  fetch_inegi_state_population.py  generate_city_paper_figures.py  generate_denue_y_figures.py  generate_explanatory_pack.py  generate_paper_figures.py  generate_phase1_explanatory_graphics.py  load_admin_units_geojson.py  load_ageb_national.py  load_city_network_metrics.py  load_denue_bulk.py  load_manzana_for_ageb_cities.py  load_manzana_national.py  load_population_units.py  materialize_ageb_derived_tables.py  merge_city_selected_subset_random_connectivity_baseline.py  monitor_ageb_load.sh  monitor_city_osm_network_extract.sh  monitor_manzana_load.sh  (+59 more)
(+96 files in other folders)
